@@ -254,8 +254,7 @@ def run_interactive(parser):
     parser: Object capable of parsing a list of arguments via parse_args.
     
   """
-  history_file = os.path.join(googlecl.GOOGLE_CL_DIR,
-                              googlecl.HISTORY_FILENAME)
+  history_file = googlecl.get_data_path(googlecl.HISTORY_FILENAME)
   try:
     import readline
     try:
