@@ -1,3 +1,7 @@
+svn HEAD
+Enhancements
+ * Follow XDG Base Directory Specification.
+
 version 0.9.9
  Enhancements
  * Enabled video upload and download for Picasa.
